Fixed a bug where the login form was off-center for RTL languages

--- a/src/resources/css/login.scss
+++ b/src/resources/css/login.scss
@@ -4,7 +4,7 @@
 
 html, body { height: 100%; }
 
-#login-form { display: block; position: absolute; top: 50%; left: 50%; @include margin(-135px, 0, 0, -150px); padding-top: 116px; width: 300px; background: url(../images/craft.png) no-repeat 0 0; }
+#login-form { display: block; position: absolute; top: 50%; left: 50%; margin: -135px 0 0 -150px; padding-top: 116px; width: 300px; background: url(../images/craft.png) no-repeat 0 0; }
 #login-form .field { margin: 10px 0; }
 
 #forgot-password { position: relative; z-index: 1; display: block; @include floatright; font-style: normal; font-size: 11px; color: $mediumtextcolor; }
